<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Big Country</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--
        activity_main.xml
    -->
    <!-- Start button text. [CHAR LIMIT=NONE] -->
    <string name="start_button">New Game</string>
    <!-- Start a challenge button text. [CHAR LIMIT=NONE] -->
    <string name="start_challenge_button">BC Challenge</string>
    <!-- Rate button text. [CHAR LIMIT=NONE] -->
    <string name="rate_button">Rate us!</string>
    <!-- Study button text. [CHAR LIMIT=NONE] -->
    <string name="study_button">Study</string>

    <!--
        activity_question.xml
    -->
    <!-- Question. [CHAR LIMIT=NONE] -->
    <string name="bigger_country_question">Which country is bigger ?</string>
    <!-- Answer option A. [CHAR LIMIT=NONE] -->
    <string name="answer_option_a">Country 1</string>
    <!-- Answer option B. [CHAR LIMIT=NONE] -->
    <string name="answer_option_b">Country 2</string>
    <!--
        Score. It will be in the format of "Score: x/y" where x is the number of user's points and
        y is the number of questions in the game. [CHAR LIMIT=NONE]
    -->
    <string name="score">
        Score: <xliff:g id="num_points" example="x">%d</xliff:g>/<xliff:g id="num_questions" example="y">%d</xliff:g>
    </string>
    <!--
        Challenge score. It will be in the format of "Score: x" where x is the number of user's
        points so far in the game. [CHAR LIMIT=NONE]
    -->
    <string name="challenge_score">
        Score: <xliff:g id="num_points" example="x">%d</xliff:g>
    </string>
    <!--
        Number of lives message during the challenge. It will be in the format of "Lives: x" where
        x is the number of user's lives in the challenge. [CHAR LIMIT=NONE]
    -->
    <string name="lives_in_challenge">
        Lives: <xliff:g id="num_lives" example="2">%d</xliff:g>
    </string>

    <!--
        activity_end.xml
    -->
    <!--
        Final score. It will be in the format of "x / y" where x is the number of user's points and
        y is the number of questions in the game. [CHAR LIMIT=NONE]
    -->
    <string name="final_score">
        <xliff:g id="num_points" example="x">%d</xliff:g> / <xliff:g id="num_questions" example="y">%d</xliff:g>
    </string>
    <!-- Go to questions' summary button text. [CHAR LIMIT=NONE] -->
    <string name="questions_summary_button">Summary</string>
    <!-- Final message. [CHAR LIMIT=NONE] -->
    <string name="end_message">Game Over!</string>
    <!-- Go to menu button text. [CHAR LIMIT=NONE] -->
    <string name="menu_button">Menu</string>

    <!--
        activity_game_summary.xml
    -->
    <!-- Head of the section. [CHAR LIMIT=NONE] -->
    <string name="section_head">Game Summary</string>
    <!--
        Question summary. It will be in the format of "i. country1 - country2" where i is the number
        of the question, country1 is option A of the question and country2 is option B of the
        question. [CHAR LIMIT=NONE]
    -->
    <string name="question_summary">
        <xliff:g id="num_question" example="1">%d</xliff:g>.
        <xliff:g id="country1" example="Australia">%s</xliff:g> - <xliff:g id="country2" example="Spain">%s</xliff:g>
    </string>

    <!--
        MainActivity.java
    -->
    <!-- Time is up message. [CHAR LIMIT=NONE] -->
    <string name="time_up_message">Time\'s up!</string>
    <!-- Explanation of the summary message. [CHAR LIMIT=NONE] -->
    <string name="summary_message_explanation">Countries in capital letters are the correct answers.
        \n\nThere is a mark showing if you got the question right.</string>

    <!--
        Game.java
    -->
    <!-- End message to a bad score. [CHAR LIMIT=NONE] -->
    <string name="end_message_fail">Best luck next time! Try harder!</string>
    <!-- End message to a medium score. [CHAR LIMIT=NONE] -->
    <string name="end_message_medium">Give me 5!</string>
    <!-- End message to a successful score. [CHAR LIMIT=NONE] -->
    <string name="end_message_success">Wooow! That was pretty amazing!</string>

    <!--
        ExitDialogFragment.java
    -->
    <!-- Exit confirmation question. [CHAR LIMIT=NONE] -->
    <string name="exit_confirmation_question">Are you sure you want to leave?</string>
    <!-- Positive button text. [CHAR LIMIT=NONE] -->
    <string name="positive_button_text">Yes</string>
    <!-- Negative button text. [CHAR LIMIT=NONE] -->
    <string name="negative_button_text">No</string>

</resources>
