<!--<?xml version="1.0" encoding="utf-8"?>-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppBackgroundStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/world_map_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:adjustViewBounds="true"
            android:src="@drawable/world_map_" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:onClick="startGame"
            android:text="@string/start_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:onClick="startGame"
            android:text="@string/start_challenge_button" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/rate_star_image_button"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:hint="@string/rate_button"
        android:onClick="startGame"
        android:scaleType="fitCenter"
        android:src="@drawable/rate_star" />

    <ImageButton
        android:id="@+id/study_book_image_button"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:hint="@string/study_button"
        android:onClick="startGame"
        android:scaleType="fitCenter"
        android:src="@drawable/study_book" />

</RelativeLayout>